<resources>
    <string name="app_name">עיר יער</string>
    <string name="cityforest_logo">CF logo</string>
    <string name="access_token">pk.eyJ1IjoiZG9yaWFudHMiLCJhIjoiY2owODMzdm9kMDAxZTMyc2Jwam9rbGVxNSJ9.XYFTdmoxupXYITEOHS-HrA</string>

    <!-- Dialogs -->
    <string name="dialog_add_new_coordinate">Add new coordinate in this location?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_coordinate">Delete this coordinate?</string>
    <string name="dialog_edit_coordinate">Edit this coordinate info?</string>
    <string name="dialog_delete_track">Delete this track?</string>
    <string name="dialog_exit_app_title">Exit CityForest</string>
    <string name="dialog_exit_app_body">Are you sure you want to exit the app?</string>
    <string name="dialog_yes">Yes</string>
    <!--End of dialogs -->


    <string name="summary_txt">Summary</string>
    <string name="title_txt">Title</string>
    <string name="cancel_butt">Cancel</string>
    <string name="save_butt">Save</string>
    <string name="add_coordinates_button">Add Coordinates</string>
    <string name="add_track_button">Add Track</string>
    <string name="cancel_add_track_butt">Cancel adding track</string>
    <string name="delete_coordinates_button">Delete Coordinates</string>
    <string name="edit_coordinates_button">Edit Coordinates</string>
    <string name="update_butt">Update</string>
    <string name="coordinates_selected_txt">Coordinates selected: </string>
    <string name="reached_limit_of_coordinates">You have reached the limit of selected coordinates to build a track.</string>
    <string name="not_enough_coordinates_selected">Track can be calculated with at least 2 coordinates</string>
    <string name="distance_km_txt">Distance (km)</string>
    <string name="duration_hour_txt">Duration (hour)</string>
    <string name="ending_point_txt">Ending Point</string>
    <string name="has_water_txt">Has water?</string>
    <string name="is_romantic_txt">Is Romantic?</string>
    <string name="season_txt">Season</string>
    <string name="starting_point_txt">Starting Point</string>
    <string name="suitable_for_bikes_txt">Suitable For Bikes?</string>
    <string name="suitable_for_dogs_txt">Suitable For Dogs?</string>
    <string name="suitable_for_families_txt">Suitable For Families?</string>
    <string name="track_level_txt">Track Level</string>
    <string name="track_name_txt">Track Name</string>
    <string name="track_summary_txt">Track Summary</string>
    <string name="choose_a_station">Choose a station</string>
    <string name="choose_type_of_point">Choose type</string>
    <string name="choose_a_level">Choose track level</string>
    <string name="choose_station_empty">Please choose starting and ending train stations</string>
    <string name="choose_distance_empty">Please add the distance of this track</string>
    <string name="choose_level_empty">Please choose the level of this track</string>
    <string name="title_field_empty">Consider adding a title to your point</string>
    <string name="choose_type_of_point_empty">Please choose the type of your point</string>
    <string name="toast_starting_point">Starting point must begin with a train station</string>
    <string name="toast_ending_point">Ending point must end with a train station</string>
    <string name="continue_edit_butt">Continue Edit</string>
    <string name="finish_editing_track_butt">Finish Editing Track</string>
    <string name="save_track_butt">Save Track</string>
    <string name="track_level">רמת קושי</string>
    <string name="strating_point_txt">התחלה -</string>
    <string name="distance_txt">מרחק (קילומטרים)</string>
    <string name="ending_point_txt_heb">סיום -</string>
    <string name="no_track_name">-ללא שם-</string>
    <string name="update_button">Update</string>

    <string-array name="train_stations">
        <item>Choose a station</item>
        <item>הר הרצל</item>
        <item>יפה נוף</item>
        <item>כיכר דניה</item>
        <item>החלוץ</item>
        <item>קרית משה</item>
        <item>התחנה המרכזית</item>
        <item>הטורים</item>
        <item>מחנה יהודה</item>
        <item>הדוידקה</item>
        <item>יפו מרכז</item>
        <item>העירייה</item>
        <item>שער שכם</item>
        <item>שבטי ישראל</item>
        <item>שמעון הצדיק</item>
        <item>גבעת התחמושת</item>
        <item>גבעת המיבתר</item>
        <item>א-סהל</item>
        <item>שועפאט</item>
        <item>בית חנינא</item>
        <item>יקותיאל אדם</item>
        <item>פסגת זאב מרכז</item>
        <item>סיירת דוכיפת</item>
        <item>חיל האוויר</item>
    </string-array>

    <string-array name="track_level">
        <item>Choose track level</item>
        <item>קל</item>
        <item>בינוני</item>
        <item>מיטיבי לכת</item>
    </string-array>

    <string-array name="season">
        <item>כל השנה</item>
        <item>קיץ</item>
        <item>חורף</item>
        <item>סתיו</item>
        <item>אביב</item>
    </string-array>

    <string-array name="points_of_interest">
        <item>Choose type</item>
        <item>תחנת רכבת</item>
        <item>תחנת אוטובוס</item>
        <item>אתר היסטורי</item>
        <item>בית קפה</item>
        <item>אחר</item>
    </string-array>


    <string name="edit_options_see_on_map">See on the map</string>
    <string name="edit_options_edit_track">Edit track</string>
    <string name="edit_options_delete_track">Delete track</string>
    <string name="edit_options_choose_track">See track details</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_activity_home">Home</string>
    <string name="home_action">Home</string>
    <string name="menu_home">דף הבית</string>
    <string name="menu_about_us">אודות</string>
    <string name="menu_adv_search">חיפוש מתקדם</string>
    <string name="menu_user_guide">מדריך למשתמש</string>
    <string name="menu_tracks">מסלולים</string>
    <string name="menu_contact_us">צור קשר</string>
    <string name="advanced_search_butt">חיפוש מתקדם</string>
    <string name="search_button">Search</string>
    <string name="suitable_for_bikes_heb">התאמה לאופניים</string>
    <string name="suitable_for_dogs_heb">התאמה לכלבים</string>
    <string name="suitable_for_families_heb">התאמה למשפחות</string>
    <string name="has_water_heb">מסלול עם מים</string>
    <string name="starting_point_hebrew">נקודת התחלה</string>
    <string name="ending_point_hebrew">נקודת סיום</string>
    <string name="is_romantic_heb">רומנטי</string>
    <string name="make_own_track_butt">בניית מסלול אישי</string>
    <string name="make_own_track_txt">מעוניין לבנות מסלול הליכה אישי?</string>
    <string name="Make_own_track_menu">צור מסלול חדש</string>
    <string name="tracks_txt">רשימת מסלולים</string>
    <string name="tracks_menu">רשימת מסלולים</string>
    <string name="edit_tracks_button">Edit Tracks</string>
    <string name="sign_out_action">התנתק</string>

    <string name="permitted_editor">1UGTxtDh7UaO9WFi70CnG3njfE02</string>
    <string name="permitted_editor2">CIWYd1t3qVY1Kg63vmVPDUoTv903</string>
    <string name="home_button">Home</string>
    <string name="editor_panel_button">Editor Panel</string>
    <string name="app_title_txt">עיר יער</string>
    <string name="what_are_you_up_to_today_txt">What are you up to today?</string>
    <string name="point_of_interest_txt">Point Of Interest?</string>
</resources>
